Test reliability tweaks